<resources>
    <string name="app_name">票宝</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
    <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
    <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
    <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
    <string name="preferences_disable_exposure_title">No exposure</string>
    <string name="preferences_disable_metering_title">No metering</string>
    <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
    <string name="preferences_front_light_title">Use front light</string>
    <string name="preferences_front_light_auto">Automatic</string>
    <string name="preferences_front_light_off">Off</string>
    <string name="preferences_front_light_on">On</string>
    <string name="preferences_general_title">General settings</string>
    <string name="preferences_invert_scan_title">Invert scan</string>
    <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>
    <string name="preferences_name">Settings</string>
    <string name="preferences_orientation_title">No automatic rotation</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_result_title">Result settings</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_search_country">Search country</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="result_address_book">Found contact info</string>
    <string name="result_calendar">Found calendar event</string>
    <string name="result_email_address">Found email address</string>
    <string name="result_geo">Found geographic coordinates</string>
    <string name="result_isbn">Found book</string>
    <string name="result_product">Found product</string>
    <string name="result_sms">Found SMS address</string>
    <string name="result_tel">Found phone number</string>
    <string name="result_text">Found plain text</string>
    <string name="result_uri">Found URL</string>
    <string name="result_wifi">Found WLAN Configuration</string>
    <string name="sbc_name">Google Book Search</string>
    <string name="wifi_changing_network">Requesting connection to network\u2026</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="password">验证码</string>
    <string name="user_name">您的手机号码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="main_tab_name_tex">员工待办</string>
    <string name="main_tab_name_publish">发布需求</string>
    <string name="main_tab_name_me">个人中心</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">全部</string>
    <string name="collection">收藏</string>
    <string name="general">综合</string>
    <string name="bonus">奖金值</string>
    <string name="credit">信用值</string>
    <string name="filter">筛选</string>
    <string name="errorview">网络不通</string>
    <string name="search">搜索</string>
    <string name="tex_kind">发票类型</string>
    <string name="show_more">显示更多</string>
    <string name="deadline">收票截止时间</string>
    <string name="need_total">需求总额</string>
    <string name="yuan">元</string>
    <string name="texi">出租车票</string>
    <string name="subway">地铁票</string>
    <string name="express">快递票</string>
    <string name="hotel">住宿票</string>
    <string name="phone">通讯票</string>
    <string name="food">餐饮票</string>
    <string name="gas">加油票</string>
    <string name="supply_receipt">提供发票</string>
    <string name="upload_paper_receipt">上传纸质发票</string>
    <string name="confirm">确定</string>
    <string name="pub_history">发布历史</string>
    <string name="whatineed">我需要：</string>
    <string name="normal_receipt">普票</string>
    <string name="special_receipt">专票</string>
    <string name="reward">悬赏红包</string>
    <string name="total">需求总额</string>
    <string name="end_of_distance">距离收集结束：%1$d天</string>
    <string name="price">¥ %1$d</string>
    <string name="collected_price">已收集  %1$f 元</string>
    <string name="collected_details">已收集%1$d张发票</string>
    <string name="urplus">剩余%1$d元红包待领取</string>
    <string name="collected_total">合计%1$d元</string>
    <string name="to_collected_price">待收集  %1$f 元</string>
    <string name="to_provided_price">待提供 %1$d元</string>
    <string name="zong">总</string>
    <string name="provided">已提供</string>
    <string name="publish_time">发布时间</string>
    <string name="early_end_collection">提前结束收集</string>
    <string name="collection_ing">收集中</string>
    <string name="arrival_part">部分到账</string>
    <string name="provide_for_me">我提供的</string>
    <string name="provide_size"> %1$d张</string>
    <string name="bouns_amount">赏金预估 %1$d元</string>
    <string name="actual_amount">实际到账 %1$d元</string>
    <string name="outstanding">未到账 %1$d元</string>
    <string name="receipt_amount">发票金额:</string>
    <string name="wx">微信</string>
    <string name="blog">微博</string>
    <string name="qq">QQ</string>
    <string name="qq_space">QQ空间</string>
    <string name="wx_circle">朋友圈</string>
    <string name="recharge_go">去充值</string>
    <string name="cancel">取消</string>
    <string name="logout_tip">确定要退出登录么？</string>
    <string name="logout">退出登录</string>
    <string name="amount_demand">需求总额</string>
    <string name="invoice_type">发票种类</string>
    <string name="blocking_time">截止时间</string>
    <string name="available_balance">可用余额</string>
    <string name="insufficient">余额不足</string>
    <string name="invoiceArea">开票地区</string>
</resources>