<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/d15">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:drawableTop="@mipmap/wx"
            android:gravity="center"
            android:drawablePadding="@dimen/d5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wx"/>
        <TextView
            android:layout_weight="1"
            android:drawableTop="@mipmap/wx_circle"
            android:gravity="center"
            android:drawablePadding="@dimen/d5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wx_circle"/>
        <TextView
            android:layout_weight="1"
            android:drawableTop="@mipmap/q"
            android:gravity="center"
            android:drawablePadding="@dimen/d5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq"/>
        <TextView
            android:layout_weight="1"
            android:drawableTop="@mipmap/qq_space"
            android:gravity="center"
            android:drawablePadding="@dimen/d5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq_space"/>
        <TextView
            android:layout_weight="1"
            android:drawableTop="@mipmap/blog"
            android:gravity="center"
            android:drawablePadding="@dimen/d5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog"/>
    </LinearLayout>

</LinearLayout>