<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/provided"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:id="@+id/iv_publish_history_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/img_add"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/ic_launcher"
                    android:visibility="invisible"
                    />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/d1"
                android:background="@color/gray_line" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provide_for_me"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/provide_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_rect_demand_info"
                android:paddingBottom="@dimen/d5"
                android:paddingLeft="@dimen/d10"
                android:paddingRight="@dimen/d10"
                android:paddingTop="@dimen/d5"
                android:text="@string/texi"/>
            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_arrival"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:text="@string/arrival_part" />
        </LinearLayout>
        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_receipt_list"></include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_amount"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bouns_amount"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actual_amount"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/outstanding"/>
        </LinearLayout>
        <include
            android:layout_height="300dp"
            android:layout_width="match_parent"
            layout="@layout/layout_qr_code_info">

        </include>
    </LinearLayout>
</ScrollView>