<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="专"
        android:textStyle="bold"
        android:textColor="@color/result_points"
        />
    <LinearLayout
        android:padding="@dimen/d10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_amount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="800"/>
            <TextView
                android:layout_toRightOf="@+id/tv_amount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"/>
            <TextView
                android:layout_below="@id/tv_amount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/urplus"/>
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="截止日期：2017-04-01"/>
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/collection_ing"/>
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/d10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="800"/>
            <TextView
                android:layout_toRightOf="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"/>
            <TextView
                android:layout_below="@id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/collected_details"/>
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/collected_total"/>
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/to_provided_price"/>
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/d10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_below="@id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_time"/>
        <TextView
            android:layout_weight="1"
            android:layout_below="@id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2017-10-22"/>
        <TextView
            android:layout_weight="1"
            android:layout_below="@id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/early_end_collection"/>
    </LinearLayout>
    <LinearLayout
        android:padding="@dimen/d10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:layout_below="@id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"/>
        <TextView
            android:layout_weight="1"
            android:layout_below="@id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="******"/>
    </LinearLayout>

</LinearLayout>