<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="314dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_tip_bg"
        android:orientation="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginStart="36dp"
                android:layout_marginTop="29dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#959595"
                android:text="@string/logout"/>
            <TextView
                android:layout_marginTop="@dimen/d13"
                android:layout_marginStart="36dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#434343"
                android:text="@string/logout_tip"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="end"
            android:layout_marginEnd="@dimen/d30"
            android:layout_marginStart="@dimen/d50"
            android:layout_marginTop="@dimen/d10"
            android:layout_marginBottom="29dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cancel1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@drawable/selector_union_main_style_text"
                android:text="@string/cancel"/>
            <Button
                android:id="@+id/btn_confirm"
                android:background="@null"
                android:textColor="@drawable/selector_union_main_style_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>